update estilo css
change in background

--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -19,7 +19,7 @@ body {
 
 .container {
     width: 420px;
-    background-color: transparent;
+    /* background-color: transparent; */
     border: 5px solid rgb(255, 255, 255, .2);
     border-radius: 10px;
     color: #fff;
