--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('/src/assent/img.jpg') no-repeat;
+    background: url('./../assent/img.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 }
